# tiwmai-api

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  supabase_schema.sql
api/: index.py
app/: main.py
app/api/: admin_endpoints.py  auth_endpoints.py  chat_endpoints.py  endpoints.py  invitation_endpoints.py  job_endpoints.py  route_aliases.py  student_auth_endpoints.py  student_endpoints.py  student_handlers.py  tutor_endpoints.py
app/core/: config.py  exceptions.py  logging.py
app/models/: __init__.py  schemas.py
app/services/: auth_service.py  chat_service.py  data_service.py  dynamodb_service.py  file_service.py  gemini_ocr_service.py  invitation_service.py  litellm_params.py  llm_params.py  quiz_augment_service.py  s3_service.py  storage_service.py  student_auth_service.py  (+2 more)
tests/: conftest.py  test_admin_auth.py  test_admin_premium_status.py  test_api.py  test_auth_oauth_session.py  test_chat_premium_gate.py  test_chat_prompt_relevance.py  test_chat_timestamp_serialization.py  test_course_access_expiry.py  test_course_quiz_sorting.py  test_dashboard_learning_summary.py  test_enrolled_courses_identity_fallback.py  test_free_course_enrollment.py  test_logging.py  test_openrouter_config.py  test_payment_renewal.py  test_production_hardening.py  test_quiz_listing_supabase.py  test_route_contracts.py  test_services.py  test_student_analysis_summary_cache.py  test_student_route_surface.py  test_supabase_query_counts.py  test_supabase_service.py  test_trial_enrollment.py  test_verify_jwt_token_cache.py
(+5 files in other folders)
