[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tanaijarn-backend"
version = "1.0.0"
description = "FastAPI backend for AI Teaching Assistant OCR application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tanaijarn Team"}
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.7.4",
    "pydantic-settings==2.1.0",
    "httpx==0.27.2",
    "pillow==10.1.0",
    "loguru==0.7.2",
    "openai>=1.0.0",
    "langchain==0.2.16",
    "langgraph>=0.2.0,<0.3.0",
    "python-dotenv",
    "supabase==2.16.0",
    "cryptography==42.0.0",
    "pyjwt==2.8.0",
    "sentry-sdk[fastapi]==2.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "api"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
